[package]
name = "sov-zk-cycle-tracer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = "README.md"
autotests = false

[dependencies]
rustc-demangle = "0.1.18"
goblin = "0.8"
capstone = "0.11.0"
regex = "1.5.4"
prettytable-rs = "0.10"
textwrap = "0.16.0"
indicatif = "0.17.6"
clap = { version = "4.4.10", features = ["derive"] }
